--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,5 +1,5 @@
 body {
-  background-color: blue; /*Pode escolher outra cor se quiser*/
+  background-color: rgb(193, 118, 243); /*Pode escolher outra cor se quiser*/
 }
 
 h1 {
